# Estudos_fastapi01

./: main.py  pyproject.toml  schemas.py
