[project]
name = "autoestudo"
version = "0.1.0"
description = "\"Estudos em cima da documentação do fastapi\""
authors = [
    {name = "ViniciusMihael",email = "viniciusmihael2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
